maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:4: error: missing argument list for method && in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$amp$amp _` or `$amp$amp(_)` instead of `$amp$amp`.
  while (c==0 && getDirection() = Direction.NORTH){
              ^